fix for run test
