# ts-server/src/types/app.ts
@@ -19,39 +19,28 @@ export type Response = ExpressResponse;
 export type NewUserDto = {
   name: string;
   email: string;
-  password: string;
-};
+}
 
 export type UserEntity = {
   id: number;
   name: string;
   email: string;
-  password: string;
 };
 
 export type NewGroupDto = {
-  ownerUserId: number;
   name: string;
-  color: string;
 };
 
 export type GroupEntity = {
   id: number;
-  ownerUserId: number;
   name: string;
-  color: string;
 };
-
-export interface MemberEntity {
-  groupId: number;
-  userId: number;
-}
 
 export type GroupBalanceEntity = {
   id: number;
   name: string;
   balance: string;
-};
+}
 
 export interface ExpenseEntity {
   id: number;
@@ -60,18 +49,18 @@ export interface ExpenseEntity {
   expenseName: string;
   amount: number;
   paidByUserId: number;
-  participants: number[];
+  participants: number;
 }
 
 export interface NewExpenseDto {
   groupId: number;
   userId: number;
   expenseName: string;
-  amount: number;
+  amount: string;
   paidByUserId: number;
   participants: number[];
 }
 
 export type Balance = {
   balance: string;
-};
+}
